Refactor all source code for Java 26 syntax
Sealed interfaces (Java 17):
- Term: sealed, permits Variable, Constant, CompoundTerm
- Constant: sealed, permits Atom

Records (Java 16):
- Atom, Variable, Functor converted to records with compact canonical
  constructors for validation; create() factories retained
- Goal.Entry converted to nested record (subGoal/cutPoint/forkSuppressiveZone)
- Solver.Solution converted to record (cas/restTree)

Pattern matching for instanceof (Java 16):
- All equals() methods updated throughout
- Type dispatch in Unification, Util, Instances, Variant

Pattern matching for switch (Java 21):
- Util.collectVars() exhaustively switches over sealed Term hierarchy

Switch expression (Java 14):
- Resolver.resolve() dispatches on Predicate.Type enum

Lambdas and @FunctionalInterface:
- Predicate.Evaluable annotated @FunctionalInterface
- SimpleProgramBuilder Comparator replaced with lambda + computeIfAbsent
- SimpleParser Map1/Map2 anonymous classes replaced with lambdas/method refs
- Solver Callable replaced with lambda
- SolverTest Evaluable anonymous classes replaced with lambdas

Modern API: var, .formatted(), getOrDefault, Map.of/Set.of,
  sb.isEmpty(), diamond operator, Collections.emptyMap()

Bug fix: SLDBranch.equals() was comparing fInputClauses to itself
  instead of rhs.fInputClauses

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>