@@ -1,7 +1,3 @@
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
 package jp.nhiguchi.libs.logpro.program.formula;
 
 import java.util.*;
@@ -10,26 +6,18 @@ import jp.nhiguchi.libs.flist.*;
 
 import jp.nhiguchi.libs.logpro.program.term.*;
 
-/**
- * Immutable.
- *
- * @author Naoshi Higuchi
- */
 public final class AtomicFormula {
 	private final Predicate fPredicate;
 	private final FList<? extends Term> fArgs;
 	public static final AtomicFormula CUT;
 
 	static {
-		FList<? extends Term> args = FList.flist();
-		CUT = new AtomicFormula(Predicate.CUT, args);
+		CUT = new AtomicFormula(Predicate.CUT, FList.flist());
 	}
 
 	private AtomicFormula(Predicate predicate, FList<? extends Term> args) {
 		if (predicate == null || args == null) throw new NullPointerException();
-
-		if (predicate.arity() != args.size())
-			throw new IllegalArgumentException();
+		if (predicate.arity() != args.size()) throw new IllegalArgumentException();
 
 		fPredicate = predicate;
 		fArgs = args;
@@ -40,8 +28,7 @@ public final class AtomicFormula {
 	}
 
 	public static AtomicFormula create(Predicate predicate, List<? extends Term> args) {
-		FList<? extends Term> fargs = FList.flist(args);
-		return new AtomicFormula(predicate, fargs);
+		return new AtomicFormula(predicate, FList.flist(args));
 	}
 
 	public static AtomicFormula create(Predicate predicate, Term... args) {
@@ -57,34 +44,25 @@ public final class AtomicFormula {
 	}
 
 	public boolean isCut() {
-		return fPredicate.type().equals(Predicate.Type.CUT);
+		return fPredicate.type() == Predicate.Type.CUT;
 	}
 
 	public boolean isSpecial() {
-		return fPredicate.type().equals(Predicate.Type.SPECIAL);
+		return fPredicate.type() == Predicate.Type.SPECIAL;
 	}
 
 	public boolean isNormal() {
-		return fPredicate.type().equals(Predicate.Type.NORMAL);
+		return fPredicate.type() == Predicate.Type.NORMAL;
 	}
 
-	/**
-	 *
-	 * @return An Eval object which contains a resolvent and a MGU. null if
-	 * failed.
-	 * @throws UnsupportedOperationException if predicate's type is not SPECIAL.
-	 */
 	public Predicate.Evaluable.Eval eval() {
 		return fPredicate.eval(fArgs);
 	}
 
 	@Override
 	public boolean equals(Object obj) {
-		if (obj == null) return false;
 		if (obj == this) return true;
-		if (!(obj instanceof AtomicFormula)) return false;
-
-		AtomicFormula rhs = (AtomicFormula) obj;
+		if (!(obj instanceof AtomicFormula rhs)) return false;
 
 		return Objects.equals(fPredicate, rhs.fPredicate)
 				&& Objects.equals(fArgs, rhs.fArgs);
@@ -92,13 +70,11 @@ public final class AtomicFormula {
 
 	@Override
 	public int hashCode() {
-		return Objects.hashCode(fPredicate)
-				+ Objects.hashCode(fArgs);
+		return Objects.hashCode(fPredicate) + Objects.hashCode(fArgs);
 	}
 
 	@Override
 	public String toString() {
-		return String.format("%s(%s)",
-				fPredicate, fArgs.toStringWithoutBrackets());
+		return "%s(%s)".formatted(fPredicate, fArgs.toStringWithoutBrackets());
 	}
 }
