@@ -1,7 +1,3 @@
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
 package jp.nhiguchi.libs.logpro.reasoning.sld;
 
 import java.util.*;
@@ -11,10 +7,6 @@ import jp.nhiguchi.libs.tuple.*;
 import jp.nhiguchi.libs.logpro.program.formula.*;
 import jp.nhiguchi.libs.logpro.program.term.*;
 
-/**
- *
- * @author Naoshi Higuchi
- */
 final class Resolution {
 	private final Goal fGoal;
 	private final Variant fInputClause;
@@ -26,66 +18,43 @@ final class Resolution {
 		fMGU = mgu;
 	}
 
-	/**
-	 * Calculate a resolvent (and a resolution object).
-	 *
-	 * @param newGoal
-	 * @param inputClause
-	 * @return retVal.get1st() is the resolvent. retVal.get2nd() is the
-	 * resolution object. If resolution failed, returns null.
-	 */
-	static Pair<Goal, Resolution> resolve(
-			Goal goal, Clause inputClause, SLDBranch cutPoint) {
-		Variant variant = Variant.create(inputClause, goal.toClause());
+	static Pair<Goal, Resolution> resolve(Goal goal, Clause inputClause, SLDBranch cutPoint) {
+		var variant = Variant.create(inputClause, goal.toClause());
 		return resolve(goal, variant, cutPoint);
 	}
 
 	private static Pair<Goal, Resolution> resolve(
 			Goal goal, Variant inputClause, SLDBranch cutPoint) {
-		AtomicFormula subGoal = goal.toSubGoals().head();
-		AtomicFormula inputHead = inputClause.getInstance().head();
+		var subGoal = goal.toSubGoals().head();
+		var inputHead = inputClause.getInstance().head();
 
-		Map<Variable, ? extends Term> mgu = Unification.getMGU(subGoal, inputHead);
+		var mgu = Unification.getMGU(subGoal, inputHead);
 		if (mgu == null) return null;
 
-		Clause unified = Instances.getInstance(
-				inputClause.getInstance(), mgu);
-
-		Goal resolvent = getResolvent(unified, mgu, goal, cutPoint);
+		var unified = Instances.getInstance(inputClause.getInstance(), mgu);
+		var resolvent = goal.nextGoal(unified, mgu, cutPoint);
 		return Pair.newPair(resolvent, new Resolution(goal, inputClause, mgu));
 	}
 
-	static Pair<Goal, Resolution> resolveSpecial(
-			Goal goal, SLDBranch cutPoint) {
-		AtomicFormula subGoal = goal.peek().getSubGoal();
-		Predicate.Evaluable.Eval eval = subGoal.eval();
+	static Pair<Goal, Resolution> resolveSpecial(Goal goal, SLDBranch cutPoint) {
+		var subGoal = goal.peek().subGoal();
+		var eval = subGoal.eval();
 
 		if (eval == null) return null;
 
-		Goal resolvent = getResolvent(
-				eval.getResolvent(), eval.getMGU(), goal, cutPoint);
+		var resolvent = goal.nextGoal(eval.getResolvent(), eval.getMGU(), cutPoint);
+		var dummy = Variant.create(Clause.query(subGoal), goal.toClause());
 
-		Variant dummy = Variant.create(
-				Clause.query(subGoal), goal.toClause());
-
-		return Pair.newPair(
-				resolvent, new Resolution(goal, dummy, eval.getMGU()));
-	}
-
-	private static Goal getResolvent(
-			Clause unified, Map<Variable, ? extends Term> mgu, Goal oldGoal,
-			SLDBranch cutPoint) {
-		return oldGoal.nextGoal(unified, mgu, cutPoint);
+		return Pair.newPair(resolvent, new Resolution(goal, dummy, eval.getMGU()));
 	}
 
 	static Pair<Goal, Resolution> resolveCut(Goal goal) {
-		assert (goal.peek().getSubGoal().isCut());
+		assert goal.peek().subGoal().isCut();
 
-		Variant v = Variant.create(Clause.fact(AtomicFormula.CUT), goal.toClause());
+		var v = Variant.create(Clause.fact(AtomicFormula.CUT), goal.toClause());
 		Map<Variable, ? extends Term> mgu = Collections.emptyMap();
-		Resolution r = new Resolution(goal, v, mgu);
-
-		Goal resolvent = goal.pop().get2nd();
+		var r = new Resolution(goal, v, mgu);
+		var resolvent = goal.pop().get2nd();
 
 		return Pair.newPair(resolvent, r);
 	}
@@ -104,11 +73,8 @@ final class Resolution {
 
 	@Override
 	public boolean equals(Object obj) {
-		if (obj == null) return false;
 		if (obj == this) return true;
-		if (!(obj instanceof Resolution)) return false;
-
-		Resolution rhs = (Resolution) obj;
+		if (!(obj instanceof Resolution rhs)) return false;
 
 		return Objects.equals(fGoal, rhs.fGoal)
 				&& Objects.equals(fInputClause, rhs.fInputClause)
@@ -124,8 +90,6 @@ final class Resolution {
 
 	@Override
 	public String toString() {
-		return String.format(
-				"Resolution(goal=%s, inputClause=%s, mgu=%s)",
-				fGoal, fInputClause, fMGU);
+		return "Resolution(goal=%s, inputClause=%s, mgu=%s)".formatted(fGoal, fInputClause, fMGU);
 	}
 }
